--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A classtrophobic inspired approach to define to define Hermes compatible classes",
   "main": "./cjs/index.js",
   "scripts": {
-    "build": "npm run cjs && npm run rollup:es && npm run rollup:index && npm run fix:default && npm run test",
+    "build": "npm run cjs && npm run rollup:es && npm run rollup:index && npm run fix:default && npm run hermes && npm run test",
     "cjs": "ascjs --no-default esm cjs",
     "hermes": "cat esm/index.js | sed 's/export default/const Class =/' > test/hermes.js && echo 'const console={assert(e,m){if(!e)print(m);}};' >> test/hermes.js && cat test/index.js | sed 's/const Class = .*//' >> test/hermes.js",
     "rollup:es": "rollup --config rollup/es.config.js && sed -i.bck 's/^var /self./' es.js && rm -rf es.js.bck",
